🐛 fix: 서울 실시간 도시데이터 - 문화 행사 API 코드 수정